# waid

./: .gitignore  README.md  setup.bat  start.bat
client/: Cargo.toml  waid.json
client/src/: main.rs
server/: config.sample.json  package-lock.json  package.json
server/data/: data.db
server/public/: index.html  style.css
server/src/: common.js  config.js  eryn.js  index.js  log.js  router.js
server/src/db/: create.eryn  db.js
server/src/templates/: index.eryn  templates.js
