[package]
name = "waid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.56.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
regex = "1.10.4"
serde = { version = "1.0.198", features = ["std", "derive"] }
serde_json = "1.0.116"
serde_regex = { git = "https://github.com/tailhook/serde-regex", rev = "336bb456ecd146ba9e3fcc2fef71870f603d72c5" }
time = { version = "0.3.36", features = ["local-offset"] }
reqwest =  { version = "0.12.4", features = ["json", "blocking"] }
uiautomation = "0.10.1"
